# microbus-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
docker/: docker-compose.conformance.yml  docker-compose.integration.yml  nats-server.conf
docker/gosidecar/: Dockerfile.gosidecar  config.yaml  env.yaml  go.mod  go.sum  main.go
scripts/: check.sh  conformance.sh  integration.sh
src/microbus_py/: __init__.py  _version.py
src/microbus_py/application/: __init__.py
src/microbus_py/cache/: __init__.py  distrib.py
src/microbus_py/cfg/: __init__.py  registry.py
src/microbus_py/claims/: __init__.py  evaluator.py
src/microbus_py/cli/: __init__.py  main.py  manifest_cmd.py  run_cmd.py  scaffold.py
src/microbus_py/codegen/: __init__.py
src/microbus_py/concurrency/: __init__.py
src/microbus_py/connector/: __init__.py  connector.py  route.py
src/microbus_py/decorators/: __init__.py  config.py  event.py  event_sink.py  function.py  metric.py  task.py  ticker.py  web.py  workflow.py
src/microbus_py/errors/: __init__.py  http.py  traced.py  types.py
src/microbus_py/frame/: __init__.py  actor.py  frame.py  headers.py
src/microbus_py/log/: __init__.py
src/microbus_py/manifest/: __init__.py  collector.py  emitter.py
src/microbus_py/metrics/: __init__.py  registry.py
src/microbus_py/mock/: __init__.py  time.py
src/microbus_py/openapi/: __init__.py  builder.py
src/microbus_py/pub/: __init__.py
src/microbus_py/resources/: __init__.py  etag.py  fs.py  template.py
src/microbus_py/sub/: __init__.py
src/microbus_py/testing/: __init__.py  actor.py
src/microbus_py/trace/: __init__.py
src/microbus_py/transport/: __init__.py  base.py  inmemory.py  nats.py
src/microbus_py/wire/: __init__.py  ack.py  codec.py  fragments.py  subjects.py
src/microbus_py/workflow/: __init__.py  flow.py  graph.py  reducer.py  registry.py  transitions.py
tests/: conftest.py
tests/conformance/: README.md  test_ack_timing.py  test_auth.py  test_baggage.py  test_cache.py  test_foreman.py  test_fragmentation.py  test_go_to_python.py  test_golden_bytes.py  test_llm_core.py  test_openapi.py  test_otlp_traces.py  test_request_response.py  test_traced_error.py  test_traceparent.py  test_workflow.py
tests/fixtures/: go_sidecar.py  nats_server.py  otlp_collector.py
tests/fixtures/golden/: post_with_body.json  simple_get.json
tests/integration/: test_subscribe_publish.py
tests/unit/: test_fixture_ports.py  test_local_runners.py  test_source_hygiene.py
tests/unit/application/: test_application.py
tests/unit/cache/: test_distrib.py
tests/unit/cfg/: test_registry.py
tests/unit/claims/: test_evaluator.py
tests/unit/cli/: test_main.py  test_manifest_cmd.py  test_scaffold.py
tests/unit/concurrency/: test_runtime.py
tests/unit/connector/: test_actor_context.py  test_auth_status_codes.py  test_clock.py  test_fragment_clear_on_shutdown.py  test_fragmentation.py  test_inbound_context.py  test_lifecycle.py  test_publish_subscribe.py  test_request_correlation.py  test_require_actor_sub.py  test_route_parsing.py  test_traced_error_handling.py
tests/unit/decorators/: test_config.py  test_event.py  test_event_sink.py  test_function.py  test_metric.py  test_task.py  test_ticker.py  test_web.py  test_workflow.py
tests/unit/errors/: test_hierarchy.py  test_traced.py
tests/unit/frame/: test_actor.py  test_frame.py  test_headers.py
tests/unit/log/: test_logger.py
tests/unit/manifest/: test_collector.py  test_emitter.py
tests/unit/metrics/: test_registry.py
(+21 files in other folders)
